--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
 <!-- MAP -->
 
 <footer>
+    <div class="wrap">
+        <span id="left">Copyright 2016 Louie Pizza</span>
+        <span id="right">
+            <a href=#>Privacy Policy</a>
+            |
+            <a href=#>Term of Use</a>
+        </span>
+    </div>
 </footer>
 
 <!--Include JavaScript Here -->
